ENH: add object orientied fitting

--- a/playground/absorption_line_velocity.ipynb
+++ b/playground/absorption_line_velocity.ipynb
@@ -1838,6 +1838,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "173.33805610930207"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta = 2*ml_res.x[2]/2.99792458e5\n",
+    "\n",
+    "(1 - np.sqrt((1+beta)/(1-beta)))*6371"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build in OOP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SpectrumSN():\n",
+    "    '''1D optical spectrum'''\n",
+    "    \n",
+    "    def __init__(self, wave, flux, z=0, flux_unc=0):\n",
+    "        self.wave = wave\n",
+    "        self.flux = flux\n",
+    "        self.lambda_rf = wave/(1+z)\n",
+    "        self.res_dict = {}\n",
+    "    \n",
+    "    def measure_vel_and_ew(self, blue_edge, red_edge,\n",
+    "                           fit_region = [],\n",
+    "                           guess = (-10000, 10, -1000),\n",
+    "                           lambda_0 = 6562.85,\n",
+    "                           line_name = 'Halpha',\n",
+    "                           delta_vel = []):\n",
+    "        '''Measure the velocity and equivalent width'''\n",
+    "        \n",
+    "        if len(fit_region) == 0:\n",
+    "            fit_region = [blue_edge[0], red_edge[0]]\n",
+    "            \n",
+    "        norm_flux = divide_continuum(self.lambda_rf, self.flux, \n",
+    "                                     blue_edge, red_edge)\n",
+    "        v_rf = velocity_rf(self.lambda_rf, lambda_0)\n",
+    "        line = np.where((self.lambda_rf >= fit_region[0]) & \n",
+    "                        (self.lambda_rf <= fit_region[1]))\n",
+    "        \n",
+    "        vel_fit = minimize(neg_lnlike_gaussian_abs, guess, method='Powell',\n",
+    "                           args=(v_rf[line], norm_flux[line], [delta_vel]))\n",
+    "        v_absorb = vel_fit.x[0]\n",
+    "        beta = vel_fit.x[2]*(len(delta_vel)+1)/2.99792458e5\n",
+    "        ew = lambda_0*(1-np.sqrt((1+beta)/(1-beta)))\n",
+    "        \n",
+    "        self.res_dict[line_name] = (v_absorb, ew)\n",
+    "    \n",
+    "    def si_6355(self, blue_edge, red_edge, \n",
+    "                fit_region = [],\n",
+    "                guess = (-10000, 10, -1000)):\n",
+    "        self.measure_vel_and_ew(blue_edge, red_edge,\n",
+    "                           fit_region = fit_region,\n",
+    "                           guess = guess,\n",
+    "                           lambda_0 = 6371.37,\n",
+    "                           line_name = 'Si6355',\n",
+    "                           delta_vel = [1143.680466])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "minus13 = SpectrumSN(wv, fl, z=z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minus13.si_6355((5830, 1.01e-14), (6288,9.84e-15),\n",
+    "                guess = (-15893.41748703,     16.70304233,  -4133.73835717))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Si6355': (-15886.310111317996, 173.0512767245486)}"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minus13.res_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
