Readme & guidance in the notebook

--- a/playground/narrow_absorption.ipynb
+++ b/playground/narrow_absorption.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "# read spec data\n",
     "z = 0.0307\n",
-    "spec = '../../SN2020jgb/spectroscopy/SN2020jgb/host_20220331_Keck2_corrected.ascii'\n",
+    "spec = './test_data/host_20220331_Keck2_corrected.ascii'\n",
     "Spec = SpectrumSN_Lines(spec, 0)"
    ]
   },
