--- a/narrow_absorption.ipynb
+++ b/narrow_absorption.ipynb
@@ -24,8 +24,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('..')\n",
-    "sys.path.append('../tools/')\n",
+    "sys.path.append('./tools/')\n",
     "import absorption_line_vel as vel\n",
     "from absorption_line_vel import SpectrumSN_Lines, AbsorbLine\n",
     "\n",
