--- a/broad_absorption.ipynb
+++ b/broad_absorption.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,13 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('..')\n",
-    "sys.path.append('../tools/')\n",
+    "sys.path.append('./tools/')\n",
     "import absorption_line_vel as vel\n",
     "from absorption_line_vel import SpectrumSN_Lines, AbsorbLine\n",
     "\n",
